@@ -83,7 +83,9 @@ typedef   signed __int64  int_64;
 #define I64_SPEC "I64"
 #endif
 
+#ifndef INT32_MAX
 #define INT32_MAX 0x7fffffff
 #define INT32_MIN (-INT32_MAX - 1)
+#endif
 
 #endif
